bugfix text overflow db-pedia infos in painting modal

--- a/Spring-Rest-React/src/main/resources/static/main.css
+++ b/Spring-Rest-React/src/main/resources/static/main.css
@@ -105,3 +105,11 @@ th {
 .modal-dialog {
 	align: center;
 }
+.painting-info-entry {
+	padding-top: 10px;	
+}
+
+div.painting-modal-infos-container {
+	padding-left: 0;
+	margin-right: 30px;
+}
